# auth-service

./: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  pyproject.toml  setup.cfg  setup_env.sh
.devcontainer/: devcontainer.json  docker-compose.yml
helm/auth-service-pompeeva/: Chart.yaml  values.yaml
helm/auth-service-pompeeva/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  image_pvc.yaml  service.yaml
k8s/: alembic-job.yaml  configmap.yaml  deployment.yaml  image_pvc.yaml  secret.yaml  service.yaml
src/app/: config.py  database.py  main.py  metrics.py  redis.py
src/app/core/: service.py
src/app/crud/: users_crud.py
src/app/endpoints/: endpoints.py
src/app/models/: user.py
src/app/producer/: producer.py
src/app/schemas/: schemas.py
src/migration/: env.py
src/migration/versions/: 78680546e088_initial.py
src/tests/unit/: conftest.py  test_main.py
src/tests/unit/core/: conftest.py  test_service.py
src/tests/unit/endpoints/: conftest.py  test_endpoints.py
