[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["Nikita Renjov <n.renjov@cft.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
passlib = "^1.7.4"
python-dotenv = "^1.0.1"
mypy = "^1.10.1"
types-passlib = "^1.7.7.20240327"
pyjwt = "^2.8.0"
pytest-cov = "^5.0.0"
pytest = "^8.2.2"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
anyio = "^4.4.0"
pytest-asyncio = "^0.23.8"
aiokafka = "^0.11.0"
brotlipy = "^0.7.0"
brotli = "^1.1.0"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.19.2"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

 [tool.pytest.ini_options]
 asyncio_mode = "auto"
